--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "ng6-starter",
+  "name": "ng-contacs",
   "version": "0.0.1",
-  "description": "Starter for Angular + ES6 + (Webpack or JSPM)",
+  "description": "Contacts manager app powered by (ng6-starter)",
   "main": "index.js",
   "dependencies": {
     "angular": "^1.5.0",
+    "angular-animate": "^1.6.6",
+    "angular-aria": "^1.6.6",
+    "angular-material": "^1.1.4",
     "angular-ui-router": "^1.0.0-beta.1",
     "normalize.css": "^3.0.3"
   },
